--- a/content/dota_addons/dota2butitemsarecustom/panorama/styles/custom_game/custom_loading_screen.css
+++ b/content/dota_addons/dota2butitemsarecustom/panorama/styles/custom_game/custom_loading_screen.css
@@ -2,8 +2,8 @@
 {
 	width: 100%;
     height: 100%;
-    background-color: black;
-    background-image: url("file://{images}/custom_game/loading_screen/loading.jpg");
+    /* background-color: black; */
+    background-image: url("file://{images}/custom_game/loading_screen/loading.png");
 	background-position: center center;
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
